--- a/css/main.css
+++ b/css/main.css
@@ -97,7 +97,7 @@ textarea {
 
 /*Large Background Image*/
 html {
-  background: url(../img/mountain-ridgeline.jpg) no-repeat center fixed;
+  background: url(../img/mtn-bkgd.jpg) no-repeat center fixed;
   height: 100%;
 }
 
@@ -131,9 +131,28 @@ body {
   height: 300px;
 }
 
-#content p span {
-  font-family: 'Comfortaa', cursive;
+#content p span, #container p span {
+  font-family: 'Comfortaa', sans-serif;
   text-transform: lowercase;
+}
+
+#container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #222;
+  background: rgba(0,0,0,0.7);
+  color: #fff;
+  text-align: center;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 300;
+  font-size: 1.25em;
+  line-height: 1.5em;
+  border-radius: 10px;
+  margin: 0 5px 0 0;
+  padding: 0px 30px;
+  width: 300px;
+  height: 150px;
 }
 
 
